--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,32 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+
+    <meta
+      name="description"
+      content="Plan your dream vacation with our travel planner."
+    />
+
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Your Travel Planner" />
+    <meta
+      property="og:description"
+      content="Plan your dream vacation with our travel planner."
+    />
+    <meta property="og:image" content="travel.avif" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="travel.avif" />
+
+    <!-- Twitter Meta Tags for Sharing on Twitter -->
+    <meta name="twitter:card" content="travel.avif" />
+    <meta name="twitter:title" content="travel.avif />
+    <meta
+      name="twitter:description"
+      content="Plan your dream vacation with our travel planner."
+    />
+    <meta name="twitter:image" content="travel.avif" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
