--- a/public/index.html
+++ b/public/index.html
@@ -12,30 +12,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <meta
-      name="description"
-      content="Plan your dream vacation with our travel planner."
-    />
+    <!-- Essential META Tags -->
+    <meta property="og:title" content="Track Your Travel Lists" />
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="./travelImage.png" />
+    <meta property="og:url" content="./" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-    <!-- Open Graph Meta Tags for Social Sharing -->
-    <meta property="og:title" content="Your Travel Planner" />
-    <meta
-      property="og:description"
-      content="Plan your dream vacation with our travel planner."
-    />
-    <meta property="og:image" content="travel.avif" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="travel.avif" />
-
-    <!-- Twitter Meta Tags for Sharing on Twitter -->
-    <meta name="twitter:card" content="travel.avif" />
-    <meta name="twitter:title" content="travel.avif />
-    <meta
-      name="twitter:description"
-      content="Plan your dream vacation with our travel planner."
-    />
-    <meta name="twitter:image" content="travel.avif" />
+    <!-- Non-Essential, But Recommended -->
+    <meta property="og:description" content="Track Your Travel Lists" />
+    <meta property="og:site_name" content="Pranjal Pratap Singh" />
+    <meta name="twitter:image:alt" content="Track Your Travel Lists" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
