--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,14 @@
     <!-- Essential META Tags -->
     <meta property="og:title" content="Track Your Travel Lists" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="./travelImage.png" />
-    <meta property="og:url" content="./" />
+    <meta
+      property="og:image"
+      content="https://cdni.iconscout.com/illustration/premium/thumb/travel-and-tourism-concept-3178175-2666340.png"
+    />
+    <meta
+      property="og:url"
+      content="https://65324f768cf99b09ffc08b37--jocular-kheer-95476e.netlify.app/"
+    />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- Non-Essential, But Recommended -->
