--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,7 @@
       property="og:image"
       content="https://cdni.iconscout.com/illustration/premium/thumb/travel-and-tourism-concept-3178175-2666340.png"
     />
-    <meta
-      property="og:url"
-      content="https://65324f768cf99b09ffc08b37--jocular-kheer-95476e.netlify.app/"
-    />
+    <meta property="og:url" content="https://travelplannereasy.netlify.app" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- Non-Essential, But Recommended -->
